# CG-17-18

./: .gitignore  README.md  TODO.txt  main.cpp  relatorio-marcos.md
CGhugo/: dicas_relatorio.txt
CGhugo/P02/code/: main.cpp
CGhugo/P03/code/: main.cpp
CGhugo/P04/code/: main.cpp
CGhugo/P05/code/: main.cpp
CGhugo/P09/code/: main.cpp
CGhugo/Trabalho - Parte 1/CG_F1_engine/: CG_F1_engine.sln
CGhugo/Trabalho - Parte 1/CG_F1_engine/cg_f1_engine/: CG_F1_engine.vcxproj  CG_F1_engine.vcxproj.filters  caixa.3d  cone.3d  engine.cpp  scene.xml
CGhugo/Trabalho - Parte 1/CG_F1_engine/cg_f1_engine/Debug/: vc140.idb
CGhugo/Trabalho - Parte 1/CG_F1_engine/debug/: CG_F1_engine.ilk  CMakeCache.txt  cone.3d
CGhugo/Trabalho - Parte 1/CG_F1_geradorTriangulos/: CG_F1_geradorTriangulos.sln
CGhugo/Trabalho - Parte 1/CG_F1_geradorTriangulos/Debug/: CG_F1_geradorTriangulos.ilk
CGhugo/Trabalho - Parte 1/CG_F1_geradorTriangulos/cg_f1_geradortriangulos/: CG_F1_geradorTriangulos.vcxproj  CG_F1_geradorTriangulos.vcxproj.filters  cone.3d  esfera.3d  geradorTriangulos.cpp  plano.3d
CGhugo/Trabalho - Parte 1/CG_F1_geradorTriangulos/cg_f1_geradortriangulos/debug/: vc140.idb
CGhugo/Trabalho - Parte 1/Generator/Generator/: Generator.sln
CGhugo/Trabalho - Parte 1/Generator/Generator/Debug/: Generator.ilk  box.3d  plane.3d  pyramid.3d
CGhugo/Trabalho - Parte 1/Generator/Generator/Generator/: Generator.cpp  (+2 more)
CGhugo/Trabalho - Parte 1/Relatório/: pseudo_box.txt  pseudo_plane.txt
CGhugo/Trabalho - Parte 1/cg-fase1/Gerador/: gerador  gerador.c
CGhugo/Trabalho - Parte 1/cg-fase1/motor/: Motor  motor.cpp  motor.h
CGhugo/Trabalho/1/: CMakeLists.txt  generated_files.rar  main.cpp
CGhugo/Trabalho/2/engine/: main.cpp
CGhugo/Trabalho/2/generator/: Generator.VC.VC.opendb
CGhugo/Trabalho/2/xml & figures/: scene.xml
CGhugo/Trabalho/3/phase3/: scene.xml
CGhugo/Trabalho/4/grupo20/engine/: CMakeLists.txt  main.cpp
CGhugo/p01 - opengl e glut/code/: CMakeLists.txt  main.cpp
parte1/project/code/: CMakeLists.txt  engine.h  main.cpp
parte1/tp/generator/: Point.h  cone.3d  generator.cpp
parte1/tp/generator/scene/: cone.3d  plane.3d  scene.xml  sphere.3d
parte2/project/code/: engine.cpp  engine.h  main.cpp  scene.xml  xml-loader.cpp  xml-loader.h
parte2/project/scene&figures/: asteroid.3d  moon.3d  planet.3d  scene.xml  sun.3d
parte2/tp/generator/scene/: README.md  box.3d  scene.xml
parte3/engine/code/: engine.cpp  engine.h  main.cpp  mainH.cpp  xml-loader.cpp  xml-loader.h
parte3/generator/: Point.h  generator.cpp  out.3d  teapot.3d
parte4/engine/code/: engine.cpp  engine.h  main.cpp  xml-loader.cpp  xml-loader.h
parte4/engine/code/utils/: lua.3d  scene.xml
parte4/generator/Debug/: sphere_test2.3d  test2.3d
parte4/generator/Generator/: Generator.cpp  Generator.vcxproj  Generator.vcxproj.filters  Point.cpp  Point.h  TexturePoint.cpp  TexturePoint.h
project/code/: engine.cpp  engine.h  main.cpp  xml-loader.cpp  xml-loader.h
tp/generator/: RESULTADOS.txt  box.3d  cone.3d  cylinder.3d  generator.cpp  pyramid.3d  sphere.3d
(+154 files in other folders)
